--- a/NikePlusImporter/NikePlusImporter.csproj
+++ b/NikePlusImporter/NikePlusImporter.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Entities\Workout.cs" />
     <Compile Include="FileConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringParser.cs" />
     <Compile Include="WebConverter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
