--- a/NikePlusImporter/Import.NikePlus.csproj
+++ b/NikePlusImporter/Import.NikePlus.csproj
@@ -41,19 +41,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Workout.cs" />
-    <Compile Include="Extensions\XmlDocument.cs" />
-    <Compile Include="FileConverter.cs" />
+    <Compile Include="Schema\IWorkoutSchema.cs" />
+    <Compile Include="WorkoutConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Schema\PopulatedWorkout.cs" />
+    <Compile Include="Schema\SimpleWorkout.cs" />
     <Compile Include="StringParser.cs" />
     <Compile Include="WebConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="lib\Contracts.devlab9ts.msi" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
